Aggiunta delle configurazioni dell'app. Implementazione delle view e relativi controller per la creazione della personaggio e la navigazione. Implementazione della logica di salvataggio e caricamento delle partite.