@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'application'
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = 'unicam'
@@ -9,19 +11,37 @@ repositories {
     mavenCentral()
 }
 
+javafx {
+    version = "25"
+    modules = ['javafx.controls', 'javafx.fxml']
+}
+
 dependencies {
-    testImplementation platform('org.junit:junit-bom:6.0.0')
+    testImplementation platform('org.junit:junit-bom:5.10.2')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    // Hibernate Core
     implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
     implementation 'org.hibernate.orm:hibernate-community-dialects:6.4.4.Final'
-    // SQLite JDBC
     implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
-    // Jakarta Persistence
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
-    // Logging Hibernate
     implementation 'org.slf4j:slf4j-simple:2.0.12'
+}
+
+application {
+    mainClass = 'it.unicam.cs.mpgc.rpg123279.app.MainApplication'
+    applicationDefaultJvmArgs = [
+        '--enable-native-access=ALL-UNNAMED',
+        '--enable-native-access=javafx.graphics'
+    ]
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDirs += ['src/main/java']
+            excludes += ['**/*.java']
+        }
+    }
 }
 
 test {
